feat: integração com serviço de elegibilidade de CPF (Bônus 1)